--- a/src/cv_gen/templates/modern/style.css
+++ b/src/cv_gen/templates/modern/style.css
@@ -8,7 +8,8 @@
 
 @page {
     size: A4;
-    margin: 0;
+    margin: 10mm 0;
+    background: linear-gradient(to right, #2c3e50 30%, #fff 30%);
 }
 
 html, body {
@@ -19,17 +20,18 @@ html, body {
 }
 
 .page {
-    display: flex;
-    min-height: 297mm;
+    position: relative;
     width: 210mm;
 }
 
 /* Sidebar */
 .sidebar {
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 30%;
-    background-color: #2c3e50;
     color: #ecf0f1;
-    padding: 25mm 8mm 15mm 8mm;
+    padding: 0 8mm;
     display: flex;
     flex-direction: column;
     gap: 6mm;
@@ -140,11 +142,12 @@ html, body {
 
 /* Main content */
 .main-content {
+    margin-left: 30%;
     width: 70%;
-    padding: 20mm 15mm 15mm 12mm;
+    padding: 0 15mm 0 12mm;
     display: flex;
     flex-direction: column;
-    gap: 6mm;
+    gap: 4mm;
 }
 
 .cv-section {
