--- a/src/cv_gen/templates/minimal/style.css
+++ b/src/cv_gen/templates/minimal/style.css
@@ -50,7 +50,6 @@ html, body {
 /* Sections */
 .cv-section {
     margin-top: 7mm;
-    break-inside: avoid;
 }
 
 .section-heading {
@@ -73,6 +72,7 @@ html, body {
     color: #222;
     margin-top: 3mm;
     margin-bottom: 0.5mm;
+    break-after: avoid;
 }
 
 .section-content p {
